feat: add accessibility labels for MainView sections
- Add accessibility support for unified scroll view
- Add section labels for VoiceOver navigation
- Support English and Korean localization
- Add MainView enum to A11yText for centralized strings

--- a/QuickLabelTimer/QuickLabelTimer/Localizable.xcstrings
+++ b/QuickLabelTimer/QuickLabelTimer/Localizable.xcstrings
@@ -316,38 +316,6 @@
         }
       }
     },
-    "a11y.mainTabs.favoritesTab" : {
-      "localizations" : {
-        "en" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Favorites Tab"
-          }
-        },
-        "ko" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "즐겨찾기 탭"
-          }
-        }
-      }
-    },
-    "a11y.mainTabs.timerTab" : {
-      "localizations" : {
-        "en" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Timer Tab"
-          }
-        },
-        "ko" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "타이머 탭"
-          }
-        }
-      }
-    },
     "a11y.mainToolbar.doneButton" : {
       "localizations" : {
         "en" : {
@@ -392,6 +360,74 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "설정"
+          }
+        }
+      }
+    },
+    "a11y.mainView.addTimerSection" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Timer creation section"
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "타이머 생성 섹션"
+          }
+        }
+      }
+    },
+    "a11y.mainView.favoriteTimersSection" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Saved timers section"
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "저장된 타이머 섹션"
+          }
+        }
+      }
+    },
+    "a11y.mainView.runningTimersSection" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Running timers section"
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "실행 중인 타이머 섹션"
+          }
+        }
+      }
+    },
+    "a11y.mainView.scrollView" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Unified timer scroll view"
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "통합 타이머 스크롤 뷰"
           }
         }
       }
