chore: move design comparison files to deprecated folder
- Move TimerRowDesignLabV910 to deprecated folder
- Move CardStyleRowV9 and CardStyleRowV10 to deprecated folder
- Focus development on inline edit functionality with V11
- Keep V11 active for edit feature development

--- a/QuickLabelTimer/QuickLabelTimer/Localizable.xcstrings
+++ b/QuickLabelTimer/QuickLabelTimer/Localizable.xcstrings
@@ -669,6 +669,15 @@
     "Design Lab V9-V10" : {
 
     },
+    "Inline Edit Lab" : {
+
+    },
+    "timer-completed" : {
+
+    },
+    "timer-label-placeholder" : {
+
+    },
     "ui.addTimer.title" : {
       "localizations" : {
         "en" : {
