feat: add glass material experiments (V12-V14) for future reference
- Implement TimerRowGlassV12 with regularMaterial and gradient background
- Add TimerRowGlassLab for testing glass effects
- Create GlassBackgroundContainer with indigo-purple gradient
- Include V13 (Deep Focus) and V14 (State-based Glass) placeholders
- Add Color hex extension for custom background colors
- Decision: Not using glass material in production due to minimal visual impact on solid backgrounds
- Keep experiments for potential future use in overlay contexts

--- a/QuickLabelTimer/QuickLabelTimer/Localizable.xcstrings
+++ b/QuickLabelTimer/QuickLabelTimer/Localizable.xcstrings
@@ -7,6 +7,12 @@
     "\"%@\"" : {
 
     },
+    "#E8EAF6" : {
+
+    },
+    "#F3E5F5" : {
+
+    },
     "%@, 남은 시간 %@" : {
       "localizations" : {
         "en" : {
@@ -669,7 +675,13 @@
     "Design Lab V9-V10" : {
 
     },
-    "Inline Edit Lab" : {
+    "End Color" : {
+
+    },
+    "Glass Material Lab" : {
+
+    },
+    "Start Color" : {
 
     },
     "timer-completed" : {
@@ -2077,6 +2089,12 @@
           }
         }
       }
+    },
+    "연한 보라" : {
+
+    },
+    "연한 인디고" : {
+
     },
     "오전 10:30 종료 예정" : {
 
