feat: add formatted end time to TimerData
- Add formattedEndTime computed property to TimerData
- Derive user-facing end time string based on timer status
- Prepare model-level data for timer row bottom section

--- a/QuickLabelTimer/QuickLabelTimer/Localizable.xcstrings
+++ b/QuickLabelTimer/QuickLabelTimer/Localizable.xcstrings
@@ -2143,6 +2143,40 @@
         }
       }
     },
+    "ui.timer.completed" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Completed"
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "종료됨"
+          }
+        }
+      }
+    },
+    "ui.timer.endTimeFormat" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Ends at %@"
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%@ 종료 예정"
+          }
+        }
+      }
+    },
     "ui.timer.title" : {
       "localizations" : {
         "en" : {
