--- a/QuickLabelTimer/QuickLabelTimer/Localizable.xcstrings
+++ b/QuickLabelTimer/QuickLabelTimer/Localizable.xcstrings
@@ -7,18 +7,6 @@
     "\"%@\"" : {
 
     },
-    "#0F2027" : {
-
-    },
-    "#2C5364" : {
-
-    },
-    "#E8EAF6" : {
-
-    },
-    "#F3E5F5" : {
-
-    },
     "%@, 남은 시간 %@" : {
       "localizations" : {
         "en" : {
@@ -101,21 +89,6 @@
           }
         }
       }
-    },
-    "🎯 브랜치 전략" : {
-
-    },
-    "💡 Tip: Play 버튼을 눌러 각 스타일의 재생 모드를 확인하세요" : {
-
-    },
-    "1. feature/timer-row-redesign" : {
-
-    },
-    "2. feature/timer-row-inline-edit" : {
-
-    },
-    "10:30 종료" : {
-
     },
     "a11y.addTimer.createButton" : {
       "localizations" : {
@@ -684,78 +657,6 @@
         }
       }
     },
-    "Deep Blue Black" : {
-
-    },
-    "Design Lab" : {
-
-    },
-    "Design Lab V2" : {
-
-    },
-    "Design Lab V9-V10" : {
-
-    },
-    "Design V15-V17 Lab" : {
-
-    },
-    "Edit Affordance V18-V21" : {
-
-    },
-    "End Color" : {
-
-    },
-    "Glass Lab V13" : {
-
-    },
-    "Glass Lab V14" : {
-
-    },
-    "Glass Material Lab" : {
-
-    },
-    "Inline Edit Lab" : {
-
-    },
-    "Manual Test Controls" : {
-
-    },
-    "NewTimerRow Test Sandbox" : {
-
-    },
-    "Running Style V22-V24" : {
-
-    },
-    "Set Completed" : {
-
-    },
-    "Set Paused" : {
-
-    },
-    "Set Running" : {
-
-    },
-    "Set Stopped" : {
-
-    },
-    "Slate Blue" : {
-
-    },
-    "Start Color" : {
-
-    },
-    "Status:" : {
-
-    },
-    "Timer Row Improvements" : {
-
-    },
-    "timer-completed" : {
-
-    },
-    "timer-label-placeholder" : {
-
-    },
     "ui.addTimer.title" : {
       "localizations" : {
         "en" : {
@@ -1132,6 +1033,102 @@
         }
       }
     },
+    "ui.alert.stop" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Stop"
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "중지"
+          }
+        }
+      }
+    },
+    "ui.alert.stopAndHide" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Stop & Remove"
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "중지 및 제거"
+          }
+        }
+      }
+    },
+    "ui.alert.stopAndHideTimer.message" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Stop this timer and remove it from bookmarks?"
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "needs_review",
+            "value" : "이 타이머를 중지하고 북마크에서 제거하시겠습니까?"
+          }
+        }
+      }
+    },
+    "ui.alert.stopAndSave" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Stop & Save"
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "중지 및 저장"
+          }
+        }
+      }
+    },
+    "ui.alert.stopAndSaveTimer.message" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Stop this timer and save to bookmarks?"
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "이 타이머를 중지하고 북마크에 저장하시겠습니까?"
+          }
+        }
+      }
+    },
+    "ui.alert.stopTimer.message" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Stop this timer?"
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "needs_review",
+            "value" : "이 타이머를 중지하시겠습니까?"
+          }
+        }
+      }
+    },
     "ui.common.appName" : {
       "localizations" : {
         "en" : {
@@ -1272,22 +1269,6 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "타이머 수정"
-          }
-        }
-      }
-    },
-    "ui.favorite.runningIndicator" : {
-      "localizations" : {
-        "en" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "«« Running"
-          }
-        },
-        "ko" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "«« 실행 중"
           }
         }
       }
@@ -2190,28 +2171,10 @@
         }
       }
     },
-    "연한 보라" : {
-
-    },
-    "연한 인디고" : {
-
-    },
-    "오전 10:30 종료 예정" : {
-
-    },
     "일시정지" : {
 
     },
-    "일시정지됨" : {
-
-    },
-    "재개" : {
-
-    },
     "정지" : {
-
-    },
-    "타이머 종료" : {
 
     }
   },
