refactor: refine section title style and timer input controls
- Reduce section title typography to headline for better spacing
- Generalize add minutes action into reusable +N minutes buttons
- Apply card-style outline using overlay stroke for input section
- Reorganize timer row related components into a dedicated folder

--- a/QuickLabelTimer/QuickLabelTimer/Localizable.xcstrings
+++ b/QuickLabelTimer/QuickLabelTimer/Localizable.xcstrings
@@ -657,6 +657,9 @@
         }
       }
     },
+    "Key" : {
+      "extractionState" : "manual"
+    },
     "ui.addTimer.title" : {
       "localizations" : {
         "en" : {
@@ -1577,18 +1580,18 @@
         }
       }
     },
-    "ui.input.add5Minutes" : {
+    "ui.input.addMinutes.%lld" : {
       "localizations" : {
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "+ 5min"
+            "value" : "+ %lldmin"
           }
         },
         "ko" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "+ 5분"
+            "value" : "+ %lld분"
           }
         }
       }
