chore: update label input placeholder text
- Change label input placeholder to clearer wording
- Improve clarity of label input guidance

--- a/QuickLabelTimer/QuickLabelTimer/Localizable.xcstrings
+++ b/QuickLabelTimer/QuickLabelTimer/Localizable.xcstrings
@@ -1633,13 +1633,13 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Enter label (leave blank to auto-generate)"
+            "value" : "Enter a label"
           }
         },
         "ko" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "라벨 입력 (비워두면 자동 생성)"
+            "value" : "라벨을 입력하세요."
           }
         }
       }
