refactor: change auto-generated timer labels from "Timer N" to time-based format
- Update generateAutoLabel to use timer duration instead of sequential numbers
- Add buildTimeComponents helper to format time in natural language
- Generate labels like "5분 타이머", "1시간 30분 타이머"
- Remove duplicate label checking logic (duplicates are acceptable)
- Simplify auto-label generation by eliminating while loop
- Add new localization keys for time-based label formatting

--- a/QuickLabelTimer/QuickLabelTimer/Localizable.xcstrings
+++ b/QuickLabelTimer/QuickLabelTimer/Localizable.xcstrings
@@ -2108,18 +2108,18 @@
         }
       }
     },
-    "ui.timer.autoLabel" : {
+    "ui.timer.autoLabel.time" : {
       "localizations" : {
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Timer %lld"
+            "value" : "%@ Timer"
           }
         },
         "ko" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "타이머%lld"
+            "value" : "%@ 타이머"
           }
         }
       }
@@ -2154,6 +2154,54 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "%@ 종료 예정"
+          }
+        }
+      }
+    },
+    "ui.timer.hourFormat" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%lld hour"
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%lld시간"
+          }
+        }
+      }
+    },
+    "ui.timer.minuteFormat" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%lld min"
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%lld분"
+          }
+        }
+      }
+    },
+    "ui.timer.secondFormat" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%lld sec"
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%lld초"
           }
         }
       }
