--- a/QuickLabelTimer/QuickLabelTimer/Localizable.xcstrings
+++ b/QuickLabelTimer/QuickLabelTimer/Localizable.xcstrings
@@ -1704,22 +1704,6 @@
         }
       }
     },
-    "ui.notification.tapToDismiss" : {
-      "localizations" : {
-        "en" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Tap to dismiss alarm"
-          }
-        },
-        "ko" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "눌러서 알람 끄기"
-          }
-        }
-      }
-    },
     "ui.notification.timerComplete" : {
       "localizations" : {
         "en" : {
@@ -1732,6 +1716,22 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "타이머 완료"
+          }
+        }
+      }
+    },
+    "ui.notification.timerEndedAt %@" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Timer ended at %@"
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%@ 종료"
           }
         }
       }
@@ -2207,6 +2207,7 @@
       }
     },
     "ui.timer.title" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
