--- a/QuickLabelTimer/QuickLabelTimer/Localizable.xcstrings
+++ b/QuickLabelTimer/QuickLabelTimer/Localizable.xcstrings
@@ -987,7 +987,7 @@
         "ko" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "북마크는 최대 20개까지 추가할 수 있습니다."
+            "value" : "북마크는 최대 %11d개까지 추가할 수 있습니다."
           }
         }
       }
